--- a/Commun/Headers.html
+++ b/Commun/Headers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +7,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Headers.css">
-    <title>Document</title>
+    <title>Header</title>
 </head>
 <body>
     <header>
         <img src="../Images/Titre.png" alt="MOBULA MOBULAR">
         <nav class="buttons">
-            <a href="">Accueil</a>
-            <a href="">Categories</a>
-            <a href="">A propos</a>
-            <a href="">Contact</a>
+            <div><a href="../Acceuil/Acceuil.html">Acceuil</a></div>
+            <div><a href="../Categorie/Categorie.html">Categorie</a></div>            
+            <div><a href="../A propos/A propos.html">A propos</a></div>
+            <div><a href="../Contact/Contact.html">Contact</a></div>
+
         </nav>
 </header>
-
-
-
-
-
-
-
-
-
-
 
 
     </body>
