--- a/Commun/bot.html
+++ b/Commun/bot.html
@@ -11,26 +11,29 @@
 </head>
 
 <body>
+
+<footer>
     <div class="titredubas">
         <h5>Mobula Mobular</h5>
         <p>Truth is underwater</p>
     </div>
 
    <div class="iconesFIS">
-        <div><a href="https://www.facebook.com/OrqueFrance"  target="_blank"><img src="/home/namoux/Documents/gits/LES-RAIES/Images/Facebook.png" alt="icone FB" style="width:23px;height:23px;"></a></div>
-        <div><a href="https://www.instagram.com/orquefrance/?igshid=NTc4MTIwNjQ2YQ%3D%3D"  target="_blank"><img src="/home/namoux/Documents/gits/LES-RAIES/Images/Instagram.png" alt="icone Insta" style="width:23px;height:23px;"></a></div>
-        <div><a href="https://open.spotify.com/show/0tHLmnMIHiVgYks472BTaK?si=F_yYDiqiRVGv3SOw14w5MQ&nd=1&dlsi=1851db1e99f04294"  target="_blank"><img src="/home/namoux/Documents/gits/LES-RAIES/Images/Spotify.png" alt="icone Spotify" style="width:23px;height:23px;"></a></div>
+        <div><a href="https://www.facebook.com/OrqueFrance"  target="_blank"><img src="../Images/Facebook.png" alt="icone FB" style="width:23px;height:23px;"></a></div>
+        <div><a href="https://www.instagram.com/orquefrance/?igshid=NTc4MTIwNjQ2YQ%3D%3D"  target="_blank"><img src="../Images/Instagram.png" alt="icone Insta" style="width:23px;height:23px;"></a></div>
+        <div><a href="https://open.spotify.com/show/0tHLmnMIHiVgYks472BTaK?si=F_yYDiqiRVGv3SOw14w5MQ&nd=1&dlsi=1851db1e99f04294"  target="_blank"><img src="../Images/Spotify.png" alt="icone Spotify" style="width:23px;height:23px;"></a></div>
    </div>
 
    <div class="menudubas">
-        <div><a href="/home/namoux/Documents/gits/LES-RAIES/Contact/Contact.html">Contact</a></div>
-        <div><a href="/home/namoux/Documents/gits/LES-RAIES/A propos/A propos.html">A propos</a></div>
-        <div><a href="/home/namoux/Documents/gits/LES-RAIES/Acceuil/Acceuil.html">Acceuil</a></div>
+        <div><a href="../Contact/Contact.html">Contact</a></div>
+        <div><a href="../A propos/A propos.html">A propos</a></div>
+        <div><a href="../Acceuil/Acceuil.html">Acceuil</a></div>
     </div>
 
     <div class="copyright">
         <p>2024 © Copyright, all right reserved.</p>
     </div>
+</footer>
 
 </body>
 </html>
