change accueil to home in index.html

--- a/Commun/index.html
+++ b/Commun/index.html
@@ -14,7 +14,7 @@
     <header>
         <img src="../Images/Titre.png" alt="MOBULA MOBULAR">
         <nav class="buttons">
-            <div><a href="../Acceuil/Acceuil.html">Acceuil</a></div>
+            <div><a href="../Acceuil/Acceuil.html">home</a></div>
             <div><a href="../Categorie/Categorie.html">Categorie</a></div>            
             <div><a href="../A propos/A propos.html">A propos</a></div>
             <div><a href="../Contact/Contact.html">Contact</a></div>
