--- a/Acceuil/Acceuil.html
+++ b/Acceuil/Acceuil.html
@@ -22,6 +22,27 @@
         </nav>
     </header>
 
+   
+    <section>
+        <div class="imgacceuil">
+            <img src="../Images/manta-point-komodo-2900-750x500.jpg.webp" alt="photo" style="width:300px;height:200px;">
+            <img src="../Images/manta-sangalaki-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;">
+            <img src="../Images/manta-ray-gili-banta-01-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;">
+        </div>
+        <div class="ligne1">
+           
+            <div><h3>Plonger au pied des volcans à Sumbawa</h3>
+                <p>Près de Bali, l'île de Sumbawa et ses volcans offrent une fantastique diversité de plongées. Des raies mantas aux nudibranches, les fonds sous-marins regorgent de merveilles.<br>
+                Indonésie : Halmahera + Sumbawa - juillet 2018</p></div>
+            <div><h3>Au milieu des raies mantas à Komodo</h3>
+                <p>À Komodo, difficile de rater les majestueuses raies mantas. On peut les admirer en plongée ou simplement depuis la surface avec un tuba. Spectacle somptueux !<br>
+                Indonésie : Komodo + Raja Ampat - juillet 2016</p></div>    
+            <div><h3>Festival de raies mantas à Blue Magic</h3>
+                <p>Le site s'appelle Blue Magic. C'est l'un de mes spots de plongée favoris à Raja Ampat. Ce récif isolé au milieu de la mer est propice à des rencontres fabuleuses.<br>
+                Indonésie : Raja Ampat - janvier 2015</p></div>
+        </div>
+    </section>
+
     <footer>
         <div class="titredubas">
             <h5>Mobula Mobular</h5>
@@ -45,22 +66,6 @@
         </div>
     </footer>
 
-    <section>
-        <div class="ligne1">
-            <img src="../Images/manta-point-komodo-2900-750x500.jpg.webp" alt="photo" style="width:300px;height:200px;">
-            <img src="../Images/manta-sangalaki-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;">
-            <img src="../Images/manta-ray-gili-banta-01-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;">
-            <div><h3>Plonger au pied des volcans à Sumbawa</h3>
-                <p>Près de Bali, l'île de Sumbawa et ses volcans offrent une fantastique diversité de plongées. Des raies mantas aux nudibranches, les fonds sous-marins regorgent de merveilles.<br>
-                Indonésie : Halmahera + Sumbawa - juillet 2018</p></div>
-            <div><h3>Au milieu des raies mantas à Komodo</h3>
-                <p>À Komodo, difficile de rater les majestueuses raies mantas. On peut les admirer en plongée ou simplement depuis la surface avec un tuba. Spectacle somptueux !<br>
-                Indonésie : Komodo + Raja Ampat - juillet 2016</p></div>    
-            <div><h3>Festival de raies mantas à Blue Magic</h3>
-                <p>Le site s'appelle Blue Magic. C'est l'un de mes spots de plongée favoris à Raja Ampat. Ce récif isolé au milieu de la mer est propice à des rencontres fabuleuses.<br>
-                Indonésie : Raja Ampat - janvier 2015</p></div>
-        </div>
-    </section>
 
     
 </body>
