--- a/Categorie/Categorie.html
+++ b/Categorie/Categorie.html
@@ -22,60 +22,43 @@
         </nav>
     </header>
 
-    <section>
-        <div class="grid item 1">
-            <img src="../Images/manta-point-komodo-2900-750x500.jpg.webp" alt="manta-point-komodo-2900-750x500">
-            <p>Plonger au pied des volcans à Sumbawa
-                Près  de Bali, en Indonésie, l'île de Sumbawa et ses volcans offrent une  fantastique diversité de plongées. Des raies mantas aux nudibranches,  les fonds sous-marins regorgent de merveilles..
-                Indonésie :  Halmahera + Sumbawa - juillet 2018</p>
+        <p>Les  raies ou batoïdes sont un super-ordre de poissons cartilagineux  caractérisés par un corps aplati, de grandes nageoires pectorales  solidaires du tronc et des fentes branchiales ventrales. Le super-ordre  contient près de 500 espèces réparties en 13 familles.
+            Nom scientifique : Batoidea</p>
+
+    <section> 
+        
+        <div class="media-text 2">
+            <img src="../Images/Raie-Pastenague.JPG" alt="Raie-Pastenague">
+            <p> La Taeniura lymma  ou raie pastenague à taches bleues se trouve en mer rouge ou dans  l'océan Indien entre 2 et 25 mètres, rarement enfouie. Animal nocturne  pouvant atteindre jusqu'à 1 mètre de diamètre, elle chasse les vers, les  petits poissons, les crevettes et les Bernard-l'ermites. Au centre  de sa queue, elle possède un aiguillon relié à une glande venimeuse qui  peut produire une piqûre douloureuse voire mortelle. </p>
         </div>
-        <div class="grid item 2">
-            <img src="../Images/manta2_1607-370x247.jpg.webp" alt="manta2_1607-370x247">
-            <p>Au milieu des raies mantas à Komodo
-                À  Komodo, difficile de rater les majestueuses raies mantas. On peut les  admirer en plongée ou simplement depuis la surface avec un tuba.  Spectacle somptueux !
-                Indonésie : Komodo + Raja Ampat - juillet 2016</p>
+        <div class="media-text 3">
+            <img src="../Images/Giant_guitarfish_(Rhynchobatus_djiddensis).jpg" alt="Giant_guitarfish_">
+            <p>Elle vit sur les fonds sableux ou vaseux, à des profondeurs allant de  9 à 100 mètres. Sa peau granuleuse est uniformément beige, elle se  confond ainsi avec le sable. Elle se nourrit de poissons et  d’invertébrés vivant sur le fond. Elle utilise sa queue pour se déplacer alors que les autres raies utilisent leurs nageoires pectorales.</p>
         </div>
-        <div class="grid item 3">
-            <img src="../Images/manta-sangalaki-770x513.jpg.webp" alt="manta-sangalaki-770x513">
-            <p>Festival de raies mantas à Blue Magic
-                Le  site s'appelle Blue Magic. C'est l'un de mes spots de plongée favoris à  Raja Ampat. Ce récif isolé au milieu de la mer est propice à  des rencontres fabuleuses.
-                Indonésie : Raja Ampat - janvier 2015</p>
+        <div class="media-text 4">
+            <img src="../Images/Manta_ray_from_Yap.jpg" alt="Manta_ray_from_Yap">
+            <p>La raie manta, aussi appelée diable des mers, est la plus grande des raies. Elle peut atteindre une envergure de neuf mètres et peser jusqu'à deux tonnes. Ce poisson cartilagineux possède un corps aplati avec deux grandes nageoires pectorales qui ressemblent à des ailes. Elle se nourrit principalement de plancton et de petits poissons en filtrant l'eau avec sa large bouche. Les raies mantas sont souvent observées nageant près de la surface des eaux tropicales et subtropicales.
+            </p>
         </div>
-        <div class="grid item 4">
-            <img src="../Images/raiemanta-770x513.jpg.webp" alt="raiemanta-770x513">
-            <p>Les raies mantas de Komodo
-                Plus  je plonge, mieux c'est ! Je n'ai jamais vu autant de raies mantas que  l'an dernier. La preuve, avec cette nouvelle vidéo, ramenée du parc  national de Komodo (Indonésie), où j'étais en juillet 2011.
-                Indonésie : Flores + Komodo + Bali - juillet 2011</p>
+        <div class="media-text 5">
+            <img src="../Images/Torpedo-marmorata-725x483.jpg" alt="Torpedo-marmorata-725x483">
+            <p>La raie électrique, aussi appelée torpille, est un poisson cartilagineux capable de produire des décharges électriques pour se défendre ou capturer ses proies. Elle vit principalement sur les fonds sableux ou vaseux et peut délivrer des chocs allant de 60 à 230 volts. La torpille marbrée (Torpedo marmorata) est une espèce courante en Méditerranée.</p>
         </div>
-        <div class="grid item 5">
-            <img src="../Images/manta-02-370x247.jpg.webp" alt="manta-02-370x247">
-            <p>La raie manta qui fait coucou
-                Il  fallait que je vous montre cette vidéo, d'une raie manta et ses  copines, rencontrées en plongée dans l'archipel de Komodo, but ultime de  ma traversée de Flores...
-                Indonésie : Flores + Komodo + Bali - juillet 2011</p>
+        <div class="media-text 6">
+            <img src="../Images/Spotted_Eagle_Ray_(Aetobatus_narinari)2.jpg" alt="Spotted_Eagle_Ray_">
+            <p>La raie léopard, également connue sous le nom d'aigle de mer-léopard, est un poisson cartilagineux de la famille des Myliobatidae. Elle se distingue par sa forme en losange et sa couleur gris foncé ou bleu-gris, parsemée de taches blanches sur le dos. Cette raie peut atteindre une envergure de 3 mètres et peser jusqu'à 230 kg. Elle vit dans les eaux tropicales et subtropicales, souvent près des récifs, et se nourrit de petits poissons, crustacés et mollusques.</p>
         </div>
-        <div class="grid item 6">
-            <img src="../Images/manta-bis-770x513.jpg.webp" alt="manta-bis-770x513">
-            <p>Rêves de mantas
-                J'en  rêve, je veux les voir, les mantas de Sangalaki. Seront-elles là ?  Aurai-je la chance de les croiser, d'admirer le gracieux ballet  subaquatique de ces inoffensives géantes ?
-                Bornéo [Malaisie et Indoné</p>
+        <div class="media-text 7">
+            <img src="../Images/Potamotrygon-henlei-2-725x483.jpg" alt="Potamotrygon-henlei-2-725x483">
+            <p>La raie léopard, également connue sous le nom d'aigle de mer-léopard, est un poisson cartilagineux de la famille des Myliobatidae. Elle se distingue par sa forme en losange et sa couleur gris foncé ou bleu-gris, parsemée de taches blanches sur le dos. Cette raie peut atteindre une envergure de 3 mètres et peser jusqu'à 230 kg. Elle vit dans les eaux tropicales et subtropicales, souvent près des récifs, et se nourrit de petits poissons, crustacés et mollusques.</p>
         </div>
-        <div class="grid item 7">
-            <img src="../Images/black-manta-ray-9633-770x513.jpg.webp" alt="black-manta-ray-9633-770x513">
-            <p>Manta Spa
-                Manta  Sandy est le site de plongée le plus fameux de Raja Ampat. Normal,  c'est un vrai "spa" à raies mantas ! La preuve en photos et vidéo.
-                Indonésie : Raja Ampat + Bali - mars 2012</p>
+        <div class="media-text 8">
+            <img src="../Images/Gymnura-altavela-725x483.jpg" alt="Gymnura-altavela-725x483">
+            <p>La **raie papillon épineuse** (Gymnura altavela), aussi appelée **pastenague ailée**, est une raie benthique que l'on trouve dans les eaux subtropicales et tempérées chaudes de l'Atlantique, de la Méditerranée et de la mer Noire. Elle se distingue par ses nageoires pectorales très larges qui lui donnent une forme de disque, et sa queue courte munie d'une ou deux épines venimeuses.</p>
         </div>
-        <div class="grid item 8">
-            <img src="../Images/manta-komodo-370x247.jpg" alt="manta-komodo-370x247">
-            <p>Mantas et nudibranches
-                Guilhem,  mon binôme de plongée à Derawan (Bornéo), a eu la gentillesse de  m'envoyer deux vidéos sous-marines qu'il a réalisées cet été, dans la  mer de Célèbes.
-                Bornéo [Malaisie et Indonésie] - juillet 2009</p>
-        </div>
-        <div class="grid item 9">
-            <img src="../Images/01-raja-ampat-manta-bis-750x500.jpg.webp" alt="01-raja-ampat-manta-bis-750x500">
-            <p>Le ballet des mantas
-                Oh,  là là ! Pas encore eu le temps de raconter toutes mes plongées à Amed,  que déjà, j'attaque celles de Nusa Lembongan. Et pas de demi-mesure : je  vous emmène direct à Manta Point !!!
-                Indonésie : Bali - juillet 2008</p>
+        <div class="media-text 9">
+            <img src="../Images/Pteromylaeus-bovinus-725x483.jpg" alt="Pteromylaeus-bovinus-725x483">
+            <p>La **raie-aigle vachette** (Aetomylaeus bovinus) est une grande raie que l'on trouve principalement dans les eaux tropicales et chaudes de l'Atlantique Est et de la Méditerranée. Elle peut atteindre une taille impressionnante de plus de deux mètres. CCette raie se distingue par son corps marron-beige avec des rayures bleu-pâle sur le dos. Elle possède une queue longue et fine, souvent dotée d'un ou deux aiguillons venimeux¹. La raie-aigle vachette préfère les fonds sableux ou vaseux des zones côtières où elle se nourrit principalement de crustacés et de mollusques.</p>
         </div>
     </section>
 
