--- a/Acceuil/Acceuil.html
+++ b/Acceuil/Acceuil.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="Acceuil.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header Footer</title>
+    <title>Acceuil</title>
 </head>
 <body>
 
     <header>
         <img src="../Images/Titre.png" alt="MOBULA MOBULAR">
         <nav class="buttons">
-            <div><a href="../Acceuil/Acceuil.html">page principale</a></div>
+            <div><a href="../Acceuil/Acceuil.html">Acceuil</a></div>
             <div><a href="../Categorie/Categorie.html">Categorie</a></div>            
             <div><a href="../A propos/A propos.html">A propos</a></div>
             <div><a href="../Contact/Contact.html">Contact</a></div>
@@ -22,15 +22,12 @@
         </nav>
     </header>
 
-   
     <section>
-        <div class="imgacceuil">
-            <img src="../Images/manta-point-komodo-2900-750x500.jpg.webp" alt="photo" style="width:300px;height:200px;">
-            <img src="../Images/manta-sangalaki-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;">
-            <img src="../Images/manta-ray-gili-banta-01-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;">
-        </div>
+
         <div class="ligne1">
-           
+            <a href="https://petitesbullesdailleurs.fr/sumbawa-komodo-sangean-gili-banta-indonesie-20190625/" target="_blank"><img src="../Images/manta-point-komodo-2900-750x500.jpg.webp" alt="photo" style="width:300px;height:200px;"></a>
+            <a href="https://petitesbullesdailleurs.fr/plonger-mantas-komodo-20171109/" target="_blank"><img src="../Images/manta-sangalaki-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;"></a>
+            <a href="https://petitesbullesdailleurs.fr/raies-mantas-raja-ampat-20150224/" target="_blank"><img src="../Images/manta-ray-gili-banta-01-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;"></a>
             <div><h3>Plonger au pied des volcans à Sumbawa</h3>
                 <p>Près de Bali, l'île de Sumbawa et ses volcans offrent une fantastique diversité de plongées. Des raies mantas aux nudibranches, les fonds sous-marins regorgent de merveilles.<br>
                 Indonésie : Halmahera + Sumbawa - juillet 2018</p></div>
@@ -40,7 +37,31 @@
             <div><h3>Festival de raies mantas à Blue Magic</h3>
                 <p>Le site s'appelle Blue Magic. C'est l'un de mes spots de plongée favoris à Raja Ampat. Ce récif isolé au milieu de la mer est propice à des rencontres fabuleuses.<br>
                 Indonésie : Raja Ampat - janvier 2015</p></div>
-        </div>
+            <a href="https://petitesbullesdailleurs.fr/raies-mantas-komodo-indonesie-video-20120205/" target="_blank"><img src="../Images/manta-ray-gili-banta-01-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;"></a>
+            <a href="https://petitesbullesdailleurs.fr/raie-manta-coucou-komodo-flores-20110803/" target="_blank"><img src="../Images/manta-02-370x247.jpg.webp" alt="photo" style="width:300px;height:200px;"></a>
+            <a href="https://petitesbullesdailleurs.fr/reves-de-mantas-20090529/" target="_blank"><img src="../Images/Manta_ray_from_Yap.jpg" alt="photo" style="width:300px;height:200px;"></a>
+           <div><h3>Les raies mantas de Komodo</h3>
+                    <p>Plus je plonge, mieux c'est ! Je n'ai jamais vu autant de raies mantas que l'an dernier. La preuve, avec cette nouvelle vidéo, ramenée du parc  national de Komodo, où j'étais en juillet 2011.<br>
+                    Indonésie : Flores + Komodo + Bali - juillet 2011</p></div>
+            <div><h3>La raie manta qui fait coucou</h3>
+                    <p>Il fallait que je vous montre cette vidéo, d'une raie manta et ses copines, rencontrées en plongée dans l'archipel de Komodo, but ultime de  ma traversée de Flores.<br>
+                    Indonésie : Flores + Komodo + Bali - juillet 2011</p></div>    
+            <div><h3>Rêves de mantas</h3>
+                    <p>J'en rêve, je veux les voir, les mantas de Sangalaki. Seront-elles là ? Aurai-je la chance de les croiser, d'admirer le gracieux ballet subaquatique de ces inoffensives géantes ?<br>
+                    Bornéo [Malaisie et Indonésie] - juillet 2009</p></div>
+                    <a href="https://petitesbullesdailleurs.fr/manta-raja-ampat-papua-video-20120422/" target="_blank"><img src="../Images/black-manta-ray-9633-770x513.jpg.webp" alt="photo" style="width:300px;height:200px;"></a>
+                    <a href="https://petitesbullesdailleurs.fr/mantas-et-nudibranches-20091012/" target="_blank"><img src="../Images/manta-komodo-370x247.jpg" alt="photo" style="width:300px;height:200px;"></a>
+                    <a href="https://petitesbullesdailleurs.fr/le-ballet-des-mantas-20080716/" target="_blank"><img src="../Images/01-raja-ampat-manta-bis-750x500.jpg.webp" alt="photo" style="width:300px;height:200px;"></a>
+                    <div><h3>Manta Spa</h3>
+                        <p> Manta Sandy est le site de plongée le plus fameux de Raja Ampat. Normal, c'est un vrai "spa" à raies mantas ! La preuve en photos et vidéo.<br>
+                            Indonésie : Raja Ampat + Bali - mars 2012</p></div>
+                    <div><h3>Mantas et nudibranches</h3>
+                        <p>Guilhem, mon binôme de plongée à Derawan (Bornéo), a eu la gentillesse de m'envoyer deux vidéos sous-marines qu'il a réalisées cet été, dans la mer de Célèbes.<br>
+                            Bornéo [Malaisie et Indonésie] - juillet 2009</p></div>    
+                    <div><h3>Le ballet des mantas</h3>
+                        <p>Oh là là ! Pas encore eu le temps de raconter toutes mes plongées à Amed, que déjà, j'attaque celles de Nusa Lembongan. Et pas de demi-mesure: je  vous emmène direct à Manta Point !<br>
+                            Indonésie : Bali - juillet 2008</p></div>
+        </div>                  
     </section>
 
     <footer>
@@ -66,7 +87,5 @@
         </div>
     </footer>
 
-
-    
 </body>
 </html>
