--- a/A propos/A propos.html
+++ b/A propos/A propos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../A propos/A propos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header Footer</title>
+    <title>Mobula Mobular</title>
 </head>
 <body>
 
