--- a/Categorie/Categorie.html
+++ b/Categorie/Categorie.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="../Categorie/Categories.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header Footer</title>
+    <title>Mobula Mobular</title>
 </head>
 <body>
 
     <header>
         <img src="../Images/Titre.png" alt="MOBULA MOBULAR">
         <nav class="buttons">
-            <div><a href="../Acceuil/Acceuil.html">page principale</a></div>
+            <div><a href="../Acceuil/Acceuil.html">Acceuil</a></div>
             <div><a href="../Categorie/Categorie.html">Categorie</a></div>            
             <div><a href="../A propos/A propos.html">A propos</a></div>
             <div><a href="../Contact/Contact.html">Contact</a></div>
