--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -28,7 +28,9 @@
                 <p>Num : 0123456789</p>
                 <p>mail : ????????????@??????????.??</p>
                 <p>adresse: 131 Av. Franklin Roosevelt, 83100 Toulon</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1456.125128709891!2d5.939229298800487!3d43.12026873940058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c91bc0b12021d7%3A0x47223717fd04aa99!2sEcole%20La%20Plateforme_Toulon%2C%20Campus%20M%C3%A9diterran%C3%A9en%20du%20Num%C3%A9rique!5e0!3m2!1sfr!2sfr!4v1727358518770!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1456.125128709891!2d5.939229298800487!3d43.12026873940058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c91bc0b12021d7%3A0x47223717fd04aa99!2sEcole%20La%20Plateforme_Toulon%2C%20Campus%20M%C3%A9diterran%C3%A9en%20du%20Num%C3%A9rique!5e0!3m2!1sfr!2sfr!4v1727358518770!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </section>
 
     <footer>
